[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Starosz"]
description = "A sample rust wasm project"
license = "MIT/Apache-2.0"



[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.7"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData'
]